# trading-agents

./: .env.example  .gitignore  README.md  docker-compose.env.example  docker-compose.yml  eval.py  graph.py  main.py  observability.py  pyproject.toml  pyrightconfig.json  test_eval.py
agents/: fundamental_analyst.py  report_writer.py
clickhouse-config/: config.xml
docs/: README.md
evaluation/: __init__.py  dataset.py  evaluator.py  llm_judge.py
src/trading_agents/: config.py  graph.py  observability.py  state.py
src/trading_agents/agents/: fundamental_analyst.py  report_writer.py
src/trading_agents/cli/: __init__.py  eval_cli.py  ingest_cli.py  main.py  query_cli.py
src/trading_agents/evaluation/: __init__.py  dataset.py  evaluator.py  llm_judge.py  rule_checks.py  scores.py
src/trading_agents/rag/: __init__.py  ingestion.py  retrieval.py
src/trading_agents/tools/: __init__.py  data_fetcher.py  retry.py
tests/: test_eval.py  test_rag.py  test_retry.py
tools/: __init__.py
trading_agents/: __init__.py  config.py  graph.py  state.py
trading_agents/agents/: __init__.py
