[project]
name = "trading-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.9",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.5",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "yfinance>=1.4.1",
]
