[project]
name = "trading-agents"
version = "0.1.0"
description = "Multi-Agent Stock Research System powered by Google Gemini & LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.9",
    "langchain-google-genai>=4.2.5",
    "langfuse>=4.7.1",
    "langgraph>=1.2.5",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "yfinance>=1.4.1",
]

[project.scripts]
trading-agents = "trading_agents.cli.main:main"
trading-agents-eval = "trading_agents.cli.eval_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
